-
Bug
-
Resolution: Fixed
-
P1: Critical
-
None
-
6.5.3, 6.6.1
-
None
-
-
08c776f02 (118-based), 2449499dd (dev), 941ac35c0 (6.7.0), c30659ac0 (6.7), ef8038ed3 (134-based-refactor)
In the Recipe Browser example, when rapidly switching between the different available pages, the application may crash. This is easiest to reproduce when holding left-click and going up and down very fast in the list containing the names of the pages.
Steps to reproduce:
- Left-click hold "Pizza" in the list of pages. Do not release.
- Rapidly go up and down in the list, while holding left-click.
- Repeat step 2 with gradually increasing speed, until the application crashes.
| For Gerrit Dashboard: QTBUG-120414 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 542754,5 | Fix crash during rapid tab switches in debug mode | 118-based | qt/qtwebengine-chromium | Status: MERGED | +2 | 0 |
| 545847,6 | Update Chromium | dev | qt/qtwebengine | Status: MERGED | +2 | 0 |
| 547886,3 | Update Chromium | 6.7 | qt/qtwebengine | Status: MERGED | +2 | 0 |
| 547895,3 | Update Chromium | 6.7.0 | qt/qtwebengine | Status: MERGED | +2 | 0 |