Fix crash during rapid tab switches in debug mode

Removed DCHECKs that pose challenges during rapid tab switches. The
issue arises when a before_unload_closure task is scheduled, and
another before unload dispatch occurs before it is being processed,
potentially resetting attributes and triggering the DCHECK.

Fixes: QTBUG-120414
Change-Id: I8daa4caf4f3c13d6a959a8c59619ad91e407a947
Reviewed-on: https://codereview.qt-project.org/c/qt/qtwebengine-chromium/+/542754
Reviewed-by: Michael Brüning <michael.bruning@qt.io>