chromium/content/browser/renderer_host/render_frame_host_impl.cc
@@ -5469,7 +5469,9 @@ void RenderFrameHostImpl::ProcessBeforeUnloadCompletedFromFrame(
       // `send_before_unload_start_time_` as the value for
       // `renderer_before_unload_start_time`, which means
       // `browser_to_renderer_ipc_time_delta` should be 0.
+#if !BUILDFLAG(IS_QTWEBENGINE)
       DCHECK(browser_to_renderer_ipc_time_delta.is_zero());
+#endif
     } else {
       base::UmaHistogramTimes(
           "Navigation.OnBeforeUnloadBrowserToRendererIpcTime",
